Use Dart Sass via `sass-embedded`
Includes minor whitespace (and rule ordering) changes unique to Dart Sass as shown in tests

--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "map-stream": "^0.0.7",
     "merge-stream": "^2.0.0",
     "minimatch": "^7.3.0",
-    "node-sass": "^8.0.0",
     "nunjucks": "^3.2.3",
     "plugin-error": "^2.0.1",
     "postcss": "^8.4.21",
@@ -70,6 +69,7 @@
     "postcss-unopacity": "^2.0.0",
     "postcss-unrgba": "^1.1.1",
     "rollup": "0.59.4",
+    "sass-embedded": "^1.58.3",
     "sassdoc": "^2.7.4",
     "slash": "^5.0.0",
     "terser": "^5.16.5",
