Move `@babel/*` packages where needed
Only the webpack example requires `@babel/*` packages to be installed directly

See `babel-loader` README
https://github.com/babel/babel-loader#readme

```
npm install -D babel-loader @babel/core @babel/preset-env webpack
```

--- a/docs/examples/webpack/package.json
+++ b/docs/examples/webpack/package.json
@@ -10,6 +10,8 @@
     "govuk-frontend": "*"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
