--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,9 +19,6 @@ on:
           - macos-latest
           - ubuntu-latest
           - windows-latest
-      types:
-        description: Check type declarations
-        type: boolean
 
 concurrency:
   group: tests-${{ github.head_ref || github.run_id }}
@@ -54,8 +51,7 @@ jobs:
       - name: Build
         uses: ./.github/workflows/actions/build
 
-      - name: Type declarations (optional)
-        if: github.event.inputs.types == 'true'
+      - name: Type declarations
         run: npm run build:types
 
   lint:
