--- a/app/package.json
+++ b/app/package.json
@@ -23,11 +23,13 @@
     "html5shiv": "^3.7.3",
     "iframe-resizer": "3.5.15",
     "jquery": "1.12.4",
+    "js-beautify": "^1.14.7",
     "js-yaml": "^4.1.0",
     "marked": "^4.2.12",
     "minimatch": "^7.0.1",
     "nodemon": "^2.0.20",
     "nunjucks": "^3.2.3",
+    "outdent": "^0.8.0",
     "prismjs": "^1.29.0",
     "shuffle-seed": "^1.1.6"
   },
