--- a/src/govuk/components/accordion/accordion.yaml
+++ b/src/govuk/components/accordion/accordion.yaml
@@ -2,7 +2,7 @@ params:
   - name: id
     type: string
     required: true
-    description: Must be unique across the domain of your service (as the expanded state of individual instances of the component persists across page loads using [`sessionStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/sessionStorage)). Used as an `id` in the HTML for the accordion as a whole, and also as a prefix for the `id`s of the section contents and the buttons that open them, so that those `id`s can be the target of `aria-labelledby` and `aria-control` attributes.
+    description: Must be unique across the domain of your service if `rememberExpanded` is `true` (as the expanded state of individual instances of the component persists across page loads using [`sessionStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/sessionStorage)). Used as an `id` in the HTML for the accordion as a whole, and also as a prefix for the `id`s of the section contents and the buttons that open them, so that those `id`s can be the target of `aria-labelledby` and `aria-control` attributes.
   - name: headingLevel
     type: integer
     required: false
@@ -15,6 +15,10 @@ params:
     type: object
     required: false
     description: HTML attributes (for example data attributes) to add to the accordion.
+  - name: rememberExpanded
+    type: boolean
+    required: false
+    description: Whether the expanded/collapsed state of the accordion should be saved when a user leaves the page and restored when they return. Default is `true`.
   - name: hideAllSectionsText
     type: string
     required: false
@@ -270,5 +274,15 @@ examples:
         - null
         - heading:
             text: Section B
+          content:
+            text: Some content
+  - name: with remember expanded off
+    hidden: true
+    data:
+      id: accordion-remember-expanded-off
+      rememberExpanded: false
+      items:
+        - heading:
+            text: Section A
           content:
             text: Some content
