--- a/src/govuk/components/exit-this-page/exit-this-page.yaml
+++ b/src/govuk/components/exit-this-page/exit-this-page.yaml
@@ -2,7 +2,7 @@ params:
 - name: text
   type: string
   required: false
-  description: Text for the link. Defaults to `Hide this page`.
+  description: Text for the link. Defaults to `Exit this page`.
 - name: redirectUrl
   type: string
   required: false
@@ -19,6 +19,22 @@ params:
   type: object
   required: false
   description: HTML attributes (for example data attributes) to add to the exit this page container.
+- name: activatedText
+  type: string
+  required: false
+  description: Text announced by screen readers when Exit this Page has been activated via the keyboard shortcut. Defaults to 'Exiting page.'
+- name: timedOutText
+  type: string
+  required: false
+  description: Text announced by screen readers when the keyboard shortcut has timed out without successful activation. Defaults to 'Exit this page expired.'
+- name: pressTwoMoreTimesText
+  type: string
+  required: false
+  description: Text announced by screen readers when the user must press <kbd>Shift</kbd> two more times to activate the button. Defaults to 'Shift, press 2 more times to exit.'
+- name: pressOneMoreTimeText
+  type: string
+  required: false
+  description: Text announced by screen readers when the user must press <kbd>Shift</kbd> one more time to activate the button. Defaults to 'Shift, press 1 more time to exit.'
 
 examples:
 - name: default  
@@ -29,6 +45,13 @@ examples:
     classes: null
     attributes:
       {}
+- name: translated
+  data:
+    text: "Gadael y dudalen"
+    activatedText: "Tudalen ymadael"
+    timedOutText: "Wedi'i amseru"
+    pressTwoMoreTimesText: "Pwyswch 'Shift' 2 gwaith arall"
+    pressOneMoreTimeText: "Pwyswch 'Shift' 1 mwy o amser"
 
 # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
 - name: testing
