--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "govuk-frontend-review",
   "description": "GOV.UK Frontend review app",
+  "main": "start.mjs",
   "engines": {
     "node": "^18.12.0",
     "npm": "^8.1.0 || ^9.1.0"
