--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../tsconfig.base.json",
-  "include": ["**/*.js", "**/*.json"],
+  "include": ["**/*.mjs", "**/*.json"],
   "exclude": ["**/*.test.*"],
   "compilerOptions": {
     "resolveJsonModule": true
