--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^6.0.2",
     "typed-query-selector": "^2.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vinyl": "^3.0.0"
   },
   "overrides": {
     "chokidar@^2": {
