Move build tasks into tasks/build

--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "build:package": "gulp build:package",
     "build:dist": "gulp build:dist",
     "build:types": "tsc --build",
-    "postbuild:package": "jest --color --selectProjects \"Gulp tasks\" --testMatch \"**/*build-package*\"",
-    "postbuild:dist": "jest --color --selectProjects \"Gulp tasks\" --testMatch \"**/*build-dist*\"",
+    "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
+    "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
     "pretest": "npm run build:app",
-    "test": "jest --color --ignoreProjects \"Gulp tasks\" --maxWorkers=50%",
+    "test": "jest --color --ignoreProjects \"Build tasks\" --maxWorkers=50%",
     "test:screenshots": "node ./tasks/screenshot-components.mjs",
     "lint": "npm run lint:editorconfig && npm run lint:prettier && npm run lint:js && npm run lint:scss",
     "lint:editorconfig": "npm run lint:editorconfig:cli",
