--- a/docs/examples/webpack/package.json
+++ b/docs/examples/webpack/package.json
@@ -12,9 +12,10 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^9.8.8",
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^11.0.0",
-    "postcss-loader": "^7.0.2",
+    "postcss-loader": "^7.1.0",
     "sass-embedded": "^1.58.3",
     "sass-loader": "^13.2.0",
     "terser-webpack-plugin": "^5.3.6",
