Remove `--destination` flag support
Tests replaced with `isDev` flag support

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "pre-release": "./bin/pre-release.sh",
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./src/govuk",
     "build:jsdoc": "jsdoc --configure jsdoc.config.js ./src/govuk",
-    "build:app": "gulp build:app --destination \"public\"",
-    "build:package": "gulp build:package --destination \"package\"",
-    "build:dist": "gulp build:dist --destination \"dist\"",
+    "build:app": "gulp build:app",
+    "build:package": "gulp build:package",
+    "build:dist": "gulp build:dist",
     "build:types": "tsc --build",
     "postbuild:package": "jest --color --selectProjects \"Gulp tasks\" --testMatch \"**/*build-package*\"",
     "postbuild:dist": "jest --color --selectProjects \"Gulp tasks\" --testMatch \"**/*build-dist*\"",
