--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "postcss-unrgba": "^1.1.1",
     "puppeteer": "^19.8.2",
     "rollup": "0.59.4",
+    "rollup-plugin-replace": "^2.2.0",
     "sass-embedded": "^1.60.0",
     "sassdoc": "^2.7.4",
     "slash": "^5.0.0",
