--- a/.github/workflows/sass.yaml
+++ b/.github/workflows/sass.yaml
@@ -123,6 +123,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
+          bundler: 1.12 # Avoid RubyGems.org Dependency API deprecation
           ruby-version: 2.1.9 # Oldest version available on ruby/setup-ruby
 
       - name: Install gem
