--- a/package.json
+++ b/package.json
@@ -14,15 +14,14 @@
   ],
   "scripts": {
     "postinstall": "npm ls --depth=0",
-    "start": "gulp dev",
-    "serve": "npm run serve --workspace app",
+    "start": "npm run dev --workspace app",
     "heroku": "npm run build:app && npm start --workspace app",
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./src/govuk",
     "build:jsdoc": "jsdoc --configure jsdoc.config.js ./src/govuk",
-    "build:app": "gulp build:app",
+    "build:app": "npm run build --workspace app",
     "build:package": "gulp build:package",
     "build:dist": "gulp build:dist",
     "build:types": "tsc --build",
@@ -86,6 +85,7 @@
   },
   "devDependencies": {
     "@percy/cli": "^1.21.0",
+    "@types/gulp": "^4.0.10",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
