--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,10 @@
   },
   "license": "MIT",
   "scripts": {
+    "build": "gulp build",
+    "dev": "gulp dev",
     "serve": "nodemon",
+    "prestart": "npm run build",
     "start": "node src/start.mjs"
   },
   "dependencies": {
@@ -21,6 +24,8 @@
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "3.1.3",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "highlight.js": "^11.7.0",
     "html5shiv": "^3.7.3",
     "iframe-resizer": "3.5.15",
@@ -32,7 +37,8 @@
     "nodemon": "^2.0.22",
     "nunjucks": "^3.2.3",
     "outdent": "^0.8.0",
-    "shuffle-seed": "^1.1.6"
+    "shuffle-seed": "^1.1.6",
+    "slash": "^5.0.0"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
