Update base `tsconfig.json` settings for Node.js packages
Node.js can automatically import CJS or ESM based on package.json `type` but not all packages are typed accordingly to indicate this yet

We’ll use `"moduleResolution": "Node”` for now to prevent misleading errors

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-    "lib": ["ESNext"],
-    "module": "NodeNext",
+    "esModuleInterop": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "noEmit": true,
     "strict": false,
     "strictBindCallApply": true,
