--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.base.json",
   "include": ["**/*.mjs", "**/*.json"],
-  "exclude": ["**/*.test.*", "./dist/**"],
+  "exclude": ["./dist/**"],
   "compilerOptions": {
     "resolveJsonModule": true
   }
