--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:app": "npm run build --workspace app",
     "build:package": "gulp build:package",
     "build:dist": "gulp build:dist",
-    "build:types": "tsc --build",
+    "build:types": "tsc --build tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
     "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
     "pretest": "npm run build:app",
