Allow Heroku to prune `devDependencies` after build
Adds package `chokidar` to the Review app as it’s required for Nunjucks watch mode

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "build:types": "tsc --build tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
     "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
+    "heroku-postbuild": "npm run build --workspace app",
+    "postheroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm ci --ignore-scripts --omit=optional --workspace app",
     "pretest": "npm run build:app",
     "test": "jest --color --ignoreProjects \"Build tasks\" --maxWorkers=50%",
     "test:screenshots": "gulp screenshots",
@@ -41,33 +43,15 @@
     "lint:scss:cli": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
-    "autoprefixer": "^9.8.8",
-    "cssnano": "^6.0.0",
-    "cssnano-preset-default": "^6.0.0",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
-    "jsdoc": "^4.0.2",
-    "jsdoc-tsimport-plugin": "^1.0.5",
-    "minimatch": "^9.0.0",
-    "nunjucks": "^3.2.4",
-    "outdent": "^0.8.0",
-    "postcss": "^8.4.21",
-    "postcss-pseudo-classes": "^0.2.1",
-    "postcss-scss": "^4.0.6",
-    "postcss-unmq": "^1.0.2",
-    "postcss-unopacity": "^2.0.0",
-    "postcss-unrgba": "^1.1.1",
-    "sass-embedded": "^1.60.0",
-    "sassdoc": "^2.7.4",
-    "slash": "^5.0.0"
-  },
-  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "autoprefixer": "^9.8.8",
     "cheerio": "^1.0.0-rc.12",
+    "cssnano": "^6.0.0",
+    "cssnano-preset-default": "^6.0.0",
     "editorconfig-checker": "^5.0.1",
     "eslint": "^8.38.0",
     "eslint-config-standard": "^17.0.0",
@@ -80,17 +64,33 @@
     "govuk-frontend-helpers": "*",
     "govuk-frontend-lib": "*",
     "govuk-frontend-tasks": "*",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "html-validate": "7.15.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-node-single-context": "^29.0.0",
     "jest-puppeteer": "^8.0.6",
     "jest-serializer-html": "^7.1.0",
+    "jsdoc": "^4.0.2",
+    "jsdoc-tsimport-plugin": "^1.0.5",
     "lint-staged": "^13.2.1",
+    "minimatch": "^9.0.0",
+    "nunjucks": "^3.2.4",
+    "outdent": "^0.8.0",
+    "postcss": "^8.4.21",
     "postcss-load-config": "^4.0.1",
+    "postcss-pseudo-classes": "^0.2.1",
+    "postcss-scss": "^4.0.6",
+    "postcss-unmq": "^1.0.2",
+    "postcss-unopacity": "^2.0.0",
+    "postcss-unrgba": "^1.1.1",
     "prettier": "^2.8.7",
     "puppeteer": "^19.9.0",
     "sass-color-helpers": "^2.1.1",
+    "sass-embedded": "^1.60.0",
+    "sassdoc": "^2.7.4",
+    "slash": "^5.0.0",
     "standard": "^17.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-gds": "^0.2.0",
