--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -41,10 +41,7 @@ jobs:
         uses: ./.github/workflows/actions/build
 
       - name: Start review application
-
-        # Review app is already built (or restored from cache) so
-        # start with `--ignore-scripts` to prevent "prestart" build
-        run: npm start --ignore-scripts --workspace app &
+        run: npm start --workspace app &
 
       - name: Send screenshots to Percy
         run: npx percy exec --parallel -- npm run test:screenshots
