--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,10 @@
     "build": "gulp build",
     "dev": "gulp dev",
     "serve": "nodemon",
-    "prestart": "npm run build",
     "start": "node src/start.mjs"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
