Export lib as `govuk-frontend-lib` npm workspace

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "app",
     "config",
     "docs/examples/*",
+    "lib",
     "package",
     "tasks"
   ],
@@ -48,14 +49,11 @@
     "autoprefixer": "^9.8.8",
     "cssnano": "^6.0.0",
     "cssnano-preset-default": "^6.0.0",
-    "front-matter": "^4.0.2",
-    "glob": "^10.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "js-yaml": "^4.1.0",
     "jsdoc": "^4.0.2",
     "jsdoc-tsimport-plugin": "^1.0.5",
-    "minimatch": "^8.0.3",
+    "minimatch": "^9.0.0",
     "nunjucks": "^3.2.3",
     "outdent": "^0.8.0",
     "postcss": "^8.4.21",
@@ -64,7 +62,6 @@
     "postcss-unmq": "^1.0.2",
     "postcss-unopacity": "^2.0.0",
     "postcss-unrgba": "^1.1.1",
-    "puppeteer": "^19.8.2",
     "sass-embedded": "^1.60.0",
     "sassdoc": "^2.7.4",
     "slash": "^5.0.0"
@@ -82,17 +79,18 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "govuk-frontend-config": "*",
+    "govuk-frontend-lib": "*",
     "govuk-frontend-tasks": "*",
     "html-validate": "7.14.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "jest-axe": "^7.0.1",
     "jest-environment-node-single-context": "^29.0.0",
     "jest-puppeteer": "^8.0.6",
     "jest-serializer-html": "^7.1.0",
     "lint-staged": "^13.2.0",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.7",
+    "puppeteer": "^19.8.2",
     "sass-color-helpers": "^2.1.1",
     "standard": "^17.0.0",
     "stylelint": "^14.16.1",
