--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
   },
   "optionalDependencies": {
     "@jest/environment": "^29.5.0",
+    "@types/express": "^4.17.17",
     "@types/gulp": "^4.0.10",
     "@types/jest": "^29.5.0",
     "@types/jest-axe": "^3.5.5",
