Include review app in build type checks
Running `npm run build:types` (optional) will now check the review app

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,6 +3,9 @@
   "files": [],
   "references": [
     {
+      "path": "./app/tsconfig.build.json"
+    },
+    {
       "path": "./src/tsconfig.build.json"
     }
   ]
