--- a/shared/helpers/package.json
+++ b/shared/helpers/package.json
@@ -3,6 +3,11 @@
   "name": "govuk-frontend-helpers",
   "description": "GOV.UK Frontend shared helpers",
   "main": "index.js",
+  "exports": {
+    ".": "./index.js",
+    "./jest/*": "./jest/*",
+    "./*": "./*.js"
+  },
   "engines": {
     "node": "^18.12.0",
     "npm": "^8.1.0 || ^9.1.0"
