--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "workspaces": [
     "app",
     "docs/examples/*",
-    "package"
+    "package",
+    "tasks"
   ],
   "scripts": {
     "postinstall": "npm ls --depth=0",
@@ -43,15 +44,9 @@
   "dependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
-    "@npmcli/run-script": "^6.0.0",
-    "@percy/puppeteer": "^2.0.2",
-    "@percy/sdk-utils": "^1.21.0",
     "autoprefixer": "^9.8.8",
-    "chalk": "^5.2.0",
-    "cpy": "^9.0.1",
     "cssnano": "^6.0.0",
     "cssnano-preset-default": "^6.0.0",
-    "del": "^7.0.0",
     "front-matter": "^4.0.2",
     "glob": "^10.0.0",
     "gulp": "^4.0.2",
@@ -62,25 +57,18 @@
     "minimatch": "^8.0.3",
     "nunjucks": "^3.2.3",
     "outdent": "^0.8.0",
-    "plugin-error": "^2.0.1",
     "postcss": "^8.4.21",
-    "postcss-load-config": "^4.0.1",
     "postcss-pseudo-classes": "^0.2.1",
     "postcss-scss": "^4.0.6",
     "postcss-unmq": "^1.0.2",
     "postcss-unopacity": "^2.0.0",
     "postcss-unrgba": "^1.1.1",
     "puppeteer": "^19.8.2",
-    "rollup": "0.59.4",
-    "rollup-plugin-replace": "^2.2.0",
     "sass-embedded": "^1.60.0",
     "sassdoc": "^2.7.4",
-    "slash": "^5.0.0",
-    "terser": "^5.16.8",
-    "yargs-parser": "^21.1.1"
+    "slash": "^5.0.0"
   },
   "devDependencies": {
-    "@percy/cli": "^1.21.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.1",
     "cheerio": "^1.0.0-rc.12",
@@ -92,6 +80,7 @@
     "eslint-plugin-jsdoc": "^40.1.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "govuk-frontend-tasks": "*",
     "html-validate": "7.14.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
@@ -103,6 +92,7 @@
     "jest-puppeteer": "^8.0.6",
     "jest-serializer-html": "^7.1.0",
     "lint-staged": "^13.2.0",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.7",
     "sass-color-helpers": "^2.1.1",
     "standard": "^17.0.0",
