--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./src/govuk",
-    "build:jsdoc": "jsdoc --configure jsdoc.config.js ./src/govuk",
+    "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
     "build:package": "gulp build:package",
     "build:dist": "gulp build:dist",
@@ -72,8 +72,6 @@
     "jest-environment-node-single-context": "^29.0.0",
     "jest-puppeteer": "^8.0.6",
     "jest-serializer-html": "^7.1.0",
-    "jsdoc": "^4.0.2",
-    "jsdoc-tsimport-plugin": "^1.0.5",
     "lint-staged": "^13.2.1",
     "minimatch": "^9.0.0",
     "nunjucks": "^3.2.4",
@@ -96,6 +94,7 @@
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^6.0.3",
     "typed-query-selector": "^2.9.2",
+    "typedoc": "^0.24.4",
     "typescript": "^5.0.4"
   },
   "optionalDependencies": {
