--- a/shared/helpers/package.json
+++ b/shared/helpers/package.json
@@ -14,6 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@axe-core/puppeteer": "^4.6.1",
     "cheerio": "^1.0.0-rc.12",
     "govuk-frontend-config": "*",
     "govuk-frontend-lib": "*",
