--- a/src/govuk/components/select/select.yaml
+++ b/src/govuk/components/select/select.yaml
@@ -190,6 +190,8 @@ examples:
     data:
       id: with-describedby
       name: with-describedby
+      label:
+        text: Label text goes here
       items:
         - value: 1
           text: GOV.UK frontend option 1
@@ -201,6 +203,8 @@ examples:
     data:
       id: with-attributes
       name: with-attributes
+      label:
+        text: Label text goes here
       items:
         - value: 1
           text: GOV.UK frontend option 1
@@ -213,6 +217,8 @@ examples:
     data:
       id: with-item-attributes
       name: with-item-attributes
+      label:
+        text: Label text goes here
       value: 2
       items:
         - text: Option 1
@@ -230,6 +236,8 @@ examples:
     data:
       id: with-falsey-values
       name: with-falsey-values
+      label:
+        text: Label text goes here
       items:
         - text: Option 1
           value: 1
@@ -243,6 +251,8 @@ examples:
     data:
       id: select-with-hint
       name: select-with-hint
+      label:
+        text: Label text goes here
       hint:
         text: Hint text goes here
   - name: hint and describedBy
@@ -250,6 +260,8 @@ examples:
     data:
       id: select-with-hint
       name: select-with-hint
+      label:
+        text: Label text goes here
       describedBy: some-id
       hint:
         text: Hint text goes here
@@ -263,6 +275,8 @@ examples:
     data:
       id: select-with-error
       name: select-with-error
+      label:
+        text: Label text goes here
       errorMessage:
         text: Error message
       items:
@@ -275,6 +289,8 @@ examples:
     data:
       id: select-with-error
       name: select-with-error
+      label:
+        text: Label text goes here
       describedBy: some-id
       errorMessage:
         text: Error message
@@ -289,6 +305,8 @@ examples:
     data:
       name: colors
       id: colors
+      label:
+        text: Label text goes here
       items:
         - value: red
           text: Red
