Fix missing table heading text in component example

--- a/src/govuk/components/table/table.yaml
+++ b/src/govuk/components/table/table.yaml
@@ -210,7 +210,8 @@ examples:
     hidden: true
     data:
       head:
-        - attributes:
+        - text: Foo
+          attributes:
             data-fizz: buzz
       rows:
         - - text: Jan
