Remove incorrect information about visually hidden text on previous/next

--- a/src/govuk/components/pagination/pagination.yaml
+++ b/src/govuk/components/pagination/pagination.yaml
@@ -36,7 +36,7 @@ params:
       - name: text
         type: string
         required: false
-        description: The link text to the previous page. Defaults to 'Previous page', where 'page' is visually hidden.
+        description: The link text to the previous page. Defaults to 'Previous'.
       - name: labelText
         type: string
         required: false
@@ -57,7 +57,7 @@ params:
       - name: text
         type: string
         required: false
-        description: The link text to the next page. Defaults to 'Next page', where 'page' is visually hidden.
+        description: The link text to the next page. Defaults to 'Next'.
       - name: labelText
         type: string
         required: false
