--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
     "build:package": "npm run build:package --workspace package",
-    "build:dist": "npm run build:dist --workspace package",
+    "build:release": "npm run build:release --workspace package",
     "build:types": "tsc --build tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
-    "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
+    "postbuild:release": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*release.test*\"",
     "heroku-postbuild": "npm run build --workspace app",
     "postheroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm ci --ignore-scripts --omit=optional --workspace app",
     "pretest": "npm run build:app",
