--- a/package/package.json
+++ b/package/package.json
@@ -2,8 +2,8 @@
   "name": "govuk-frontend",
   "description": "GOV.UK Frontend contains the code you need to start building a user interface for government platforms and services.",
   "version": "4.6.0",
-  "main": "govuk/all.js",
-  "module": "govuk-esm/all.mjs",
+  "main": "dist/govuk/all.js",
+  "module": "dist/govuk-esm/all.mjs",
   "files": [
     "dist",
     "package.json",
@@ -11,18 +11,19 @@
   ],
   "exports": {
     ".": {
-      "sass": "./govuk/all.scss",
-      "import": "./govuk-esm/all.mjs",
-      "require": "./govuk/all.js"
+      "sass": "./dist/govuk/all.scss",
+      "import": "./dist/govuk-esm/all.mjs",
+      "require": "./dist/govuk/all.js"
     },
-    "./govuk/": "./govuk/",
-    "./govuk-esm/": "./govuk-esm/",
-    "./package.json": "./package.json"
+    "./govuk-prototype-kit.config.json": "./dist/package.json",
+    "./package.json": "./package.json",
+    "./src/*": "./src/*",
+    "./*": "./dist/*"
   },
   "sideEffects": [
-    "govuk-esm/vendor/**"
+    "dist/govuk-esm/vendor/**"
   ],
-  "sass": "govuk/all.scss",
+  "sass": "dist/govuk/all.scss",
   "engines": {
     "node": ">= 4.2.0"
   },
