--- a/package/package.json
+++ b/package/package.json
@@ -25,7 +25,8 @@
   ],
   "sass": "dist/govuk/all.scss",
   "engines": {
-    "node": ">= 4.2.0"
+    "node": "^16.16.0 || ^18.12.0",
+    "npm": "^8.1.0 || ^9.1.0"
   },
   "author": {
     "name": "GOV.UK Design System Team (Government Digital Service)",
