Configure review app with `govuk-frontend` dependency
Preparation work for importing the `govuk-frontend` package into the Review app for both Sass and JavaScript

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,6 +3,7 @@
   "include": [
     "**/*.js",
     "**/*.mjs",
+    "../package",
     "../shared/config",
     "../shared/lib",
     "../shared/tasks"
