--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./package/src/govuk",
     "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
-    "build:package": "gulp build:package",
-    "build:dist": "gulp build:dist",
+    "build:package": "npm run build:package --workspace package",
+    "build:dist": "npm run build:dist --workspace package",
     "build:types": "tsc --build tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
     "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
@@ -31,7 +31,6 @@
     "postheroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm ci --ignore-scripts --omit=optional --workspace app",
     "pretest": "npm run build:app",
     "test": "jest --color --ignoreProjects \"Build tasks\" --maxWorkers=50%",
-    "test:screenshots": "gulp screenshots",
     "lint": "npm run lint:editorconfig && npm run lint:prettier && npm run lint:js && npm run lint:scss",
     "lint:editorconfig": "npm run lint:editorconfig:cli",
     "lint:editorconfig:cli": "editorconfig-checker",
