--- a/package/package.json
+++ b/package/package.json
@@ -25,10 +25,18 @@
     "npm": "^8.1.0 || ^9.1.0"
   },
   "license": "MIT",
+  "scripts": {
+    "build:package": "gulp build:package",
+    "build:dist": "gulp build:dist",
+    "test:screenshots": "gulp screenshots"
+  },
   "devDependencies": {
     "govuk-frontend-config": "*",
     "govuk-frontend-helpers": "*",
     "govuk-frontend-lib": "*",
+    "govuk-frontend-tasks": "*",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "nunjucks": "^3.2.4",
     "outdent": "^0.8.0",
     "sass-color-helpers": "^2.1.1",
