--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./src/govuk",
     "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
-    "build:package": "gulp build:package",
-    "build:dist": "gulp build:dist",
+    "build:package": "gulp build:package --color",
+    "build:dist": "gulp build:dist --color",
     "build:types": "tsc --build tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
     "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
