Support Gulp colour output for GitHub Actions etc
Also supports concurrent task runners like `npm-run-all` and `concurrently`

--- a/package/package.json
+++ b/package/package.json
@@ -26,8 +26,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "build:package": "gulp build:package",
-    "build:release": "gulp build:release"
+    "build:package": "gulp build:package --color",
+    "build:release": "gulp build:release --color"
   },
   "devDependencies": {
     "govuk-frontend-config": "*",
