Move review app build to `predev` and `pretest` scripts
This joins `heroku-postbuild` in identifying all the tasks that need a build first

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
+    "predev": "npm run build --workspace app",
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./package/src/govuk",
     "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
@@ -29,7 +30,7 @@
     "postbuild:release": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*release.test*\"",
     "heroku-postbuild": "npm run build --workspace app",
     "postheroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm ci --ignore-scripts --omit=optional --workspace app",
-    "pretest": "npm run build:app",
+    "pretest": "npm run build --workspace app",
     "test": "jest --color --ignoreProjects \"Build tasks\" --maxWorkers=50%",
     "lint": "npm run lint:editorconfig && npm run lint:prettier && npm run lint:js && npm run lint:scss",
     "lint:editorconfig": "npm run lint:editorconfig:cli",
