Set up separate scripts, styles, watch tasks for package
In preparation for build artifacts being deleted, package will need utility tasks to run (on watch) during development

--- a/package/package.json
+++ b/package/package.json
@@ -26,8 +26,10 @@
   },
   "license": "MIT",
   "scripts": {
+    "build": "npm run build:package",
     "build:package": "gulp build:package --color",
-    "build:release": "gulp build:release --color"
+    "build:release": "gulp build:release --color",
+    "dev": "gulp dev --color"
   },
   "devDependencies": {
     "govuk-frontend-config": "*",
