Adjust `workspaces` order to build dependencies first
The switch to `packages/*` has caused the review app to build _before_ `govuk-frontend` which threw errors on missing Sass and JavaScript

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "license": "MIT",
   "workspaces": [
-    "packages/*",
-    "docs/examples/*",
-    "shared/*"
+    "shared/*",
+    "packages/govuk-frontend",
+    "packages/govuk-frontend-review",
+    "docs/examples/*"
   ],
   "scripts": {
     "postinstall": "npm ls --depth=0",
