--- a/src/govuk/components/checkboxes/checkboxes.yaml
+++ b/src/govuk/components/checkboxes/checkboxes.yaml
@@ -79,13 +79,13 @@ params:
         required: false
         description: Whether the checkbox should be checked when the page loads. Takes precedence over the top-level `values` option.
       - name: conditional
-        type: boolean
+        type: object
         required: false
-        description: If `true`, content provided will be revealed when the item is checked.
-      - name: conditional.html
-        type: string
-        required: false
-        description: Provide content for the conditional reveal.
+        description: Provide additional content to reveal when the checkbox is checked.
+        params:
+          - name: html
+            type: string
+            description: The HTML to reveal when the checkbox is checked
       - name: behaviour
         type: string
         required: false
