--- a/src/govuk/components/radios/radios.yaml
+++ b/src/govuk/components/radios/radios.yaml
@@ -71,13 +71,13 @@ params:
         required: false
         description: Whether the radio should be checked when the page loads. Takes precedence over the top-level `value` option.
       - name: conditional
-        type: string
+        type: object
         required: false
-        description: If `true`, content provided will be revealed when the item is checked.
-      - name: conditional.html
-        type: html
-        required: false
-        description: Provide content for the conditional reveal.
+        description: Provide additional content to reveal when the radio is checked.
+        params:
+          - name: html
+            type: string
+            description: The HTML to reveal when the radio is checked
       - name: disabled
         type: boolean
         required: false
