--- a/src/govuk/components/button/button.yaml
+++ b/src/govuk/components/button/button.yaml
@@ -26,7 +26,7 @@ params:
   - name: disabled
     type: boolean
     required: false
-    description: Whether the button should be disabled. For button and input elements, `disabled` and `aria-disabled` attributes will be set automatically.
+    description: Whether the button should be disabled. For button and input elements, `disabled` and `aria-disabled` attributes will be set automatically. This has no effect on `a` elements.
   - name: href
     type: string
     required: false
@@ -64,11 +64,6 @@ examples:
     data:
       text: Link button
       href: '/'
-  - name: link disabled
-    data:
-      text: Disabled link button
-      href: '/'
-      disabled: true
   - name: start
     data:
       text: Start now button
