--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm start --workspace app &
 
       - name: Send screenshots to Percy
-        run: npx percy exec --parallel -- npm run test:screenshots
+        run: npx percy exec --parallel -- npm run test:screenshots --workspace app
 
       - name: Finalise Percy build
         run: npx percy build:finalize
