Move review app build to `predev` and `pretest` scripts
This joins `heroku-postbuild` in identifying all the tasks that need a build first

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
     "heroku-postbuild": "npm run build --workspace app",
     "postheroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm ci --ignore-scripts --omit=optional --workspace app",
-    "pretest": "npm run build:app",
+    "pretest": "npm run build --workspace app",
     "test": "jest --color --ignoreProjects \"Build tasks\" --maxWorkers=50%",
     "lint": "npm run lint:editorconfig && npm run lint:prettier && npm run lint:js && npm run lint:scss",
     "lint:editorconfig": "npm run lint:editorconfig:cli",
