--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "gulp build --color",
+    "predev": "npm run build",
     "dev": "gulp dev --color",
+    "build": "gulp build --color",
     "serve": "nodemon",
     "start": "node src/start.mjs",
     "test:screenshots": "gulp screenshots --color"
