Rename task `build:dist` to `build:release` for clarity
This change also removes `paths.dist` to make it clear that “release `dist`” is a build directory below the project root:

```
join(paths.root, 'dist')
```

Similar to “package `dist`” being a build directory below the package:

```
join(paths.package, 'dist')
```

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
     "build:package": "gulp build:package --color",
-    "build:dist": "gulp build:dist --color",
+    "build:release": "gulp build:release --color",
     "build:types": "tsc --build tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
-    "postbuild:dist": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*dist.test*\"",
+    "postbuild:release": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*release.test*\"",
     "heroku-postbuild": "npm run build --workspace app",
     "postheroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm ci --ignore-scripts --omit=optional --workspace app",
     "pretest": "npm run build --workspace app",
