--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./package/src/govuk",
     "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
-    "build:package": "gulp build:package --color",
-    "build:release": "gulp build:release --color",
+    "build:package": "npm run build:package --workspace package",
+    "build:release": "npm run build:release --workspace package",
     "build:types": "tsc --build tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
     "postbuild:release": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*release.test*\"",
