Set up separate scripts, styles, watch tasks etc for package
In preparation for build artifacts being deleted, package will need utility tasks to run (on watch) during development

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   ],
   "scripts": {
     "postinstall": "npm ls --depth=0",
-    "start": "npm run dev --workspace app",
+    "start": "npm run dev",
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
+    "dev": "concurrently \"npm run dev --workspace app\" \"npm run dev --workspace package\" --kill-others --names \"app,pkg\" --prefix-colors \"red.dim,blue.dim\"",
     "build:sassdoc": "sassdoc --config sassdoc.config.yaml ./package/src/govuk",
     "build:jsdoc": "typedoc",
     "build:app": "npm run build --workspace app",
@@ -48,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^9.8.8",
+    "concurrently": "^8.0.1",
     "cssnano": "^6.0.0",
     "cssnano-preset-default": "^6.0.0",
     "editorconfig-checker": "^5.0.1",
